# Control_layer

./: 01_skeleton.md  02_core_result.md  README.md  SPEC.md  template_module.md
cmake/: CompileOptions.cmake  hanConfig.cmake.in
control_layer/: 99_audit.md  CMakeLists.txt  ROADMAP.md
control_layer/cmake/: hanTargets.cmake
control_layer/examples/: 00_smoke.cpp  CMakeLists.txt
control_layer/include/han/: han.hpp
control_layer/include/han/core/: logger.hpp  result.hpp  units.hpp
control_layer/include/han/dyn/: crba.hpp  rne.hpp
control_layer/include/han/kin/: jacobian.hpp  singularity.hpp
control_layer/include/han/model/: payload.hpp  preset_registry.hpp
control_layer/include/han/types/: fwd.hpp  pose.hpp  wrench.hpp
control_layer/src/dyn/: CMakeLists.txt  placeholder.cpp
control_layer/src/kin/: placeholder.cpp
control_layer/src/types/: CMakeLists.txt
include/han/core/: error.hpp  fwd.hpp  realtime_guard.hpp
include/han/dyn/: ext_force_observer.hpp  fwd.hpp  inverse_dynamics.hpp
include/han/kin/: forward_kinematics.hpp  fwd.hpp  inverse_kinematics.hpp
include/han/model/: actuator_model.hpp  fwd.hpp  robot_model.hpp
include/han/types/: aliases.hpp  joint_state.hpp  twist.hpp
src/core/: CMakeLists.txt  placeholder.cpp
src/kin/: CMakeLists.txt
src/model/: CMakeLists.txt  placeholder.cpp
tests/: CMakeLists.txt
